# katome

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  appveyor.yml  cov.sh  memusg.sh  rustfmt.toml
config/: log4rs.yaml  settings_example.toml
src/: client.rs  settings_example.toml
src/data/: input.rs  mod.rs  sequences.rs  types.rs
src/katome/: compress.rs  config.rs  lib.rs  prelude.rs  slices.rs  utils.rs
src/katome/algorithms/: builder.rs  collapser.rs  euler.rs  hardener.rs  mod.rs  pruner.rs  shrinker.rs  standardizer.rs  standarizer.rs
src/katome/asm/: assembler.rs  basic_assembler.rs  mod.rs
src/katome/collections/: mod.rs
src/katome/collections/girs/: edges.rs  hm_gir.rs  hs_gir.rs  mod.rs
src/katome/collections/graphs/: mod.rs  pt_graph.rs
src/katome/data/: compress.rs  contigs_statistics.rs  edges.rs  gir.rs  graph.rs  input.rs  map.rs  mod.rs  primitives.rs  read_slice.rs  sequences.rs  slices.rs  statistics.rs  table.rs  types.rs  vertex.rs
src/katome/data/collections/: mod.rs
src/katome/data/collections/girs/: gir.rs  hm_gir.rs  hs_gir.rs  mod.rs
src/katome/data/collections/graphs/: graph.rs  mod.rs  pt_graph.rs
src/katome/stats/: collections.rs  collections.rs.bk  contigs.rs  contigs.rs.bk  mod.rs  mod.rs.bk
tests/: build.rs  collapser.rs  conversion.rs  pruner.rs  shrinker.rs  standardizer.rs  test_building.rs  test_building_gir.rs
tests/test_files/: data1.txt  data2.txt  data3.txt  data_too_short_read.txt  simple_gir_creation.txt
