[package]
name = "katome"
version = "0.1.0"
authors = ["Łukasz Neumann <fuine@riseup.net>"]


[[bin]]
name = "katome"
path = "src/client.rs"

[lib]
name = "katome"
path = "src/katome/lib.rs"

[dependencies]
pbr = "0.1.1"
rand = "*"

# [dependencies.alloc]
# git = "https://github.com/phil-opp/nightly-liballoc.git"

[profile.release]
debug = true
