[package]
name = "katome"
version = "0.1.0"
authors = ["Łukasz Neumann <fuine@riseup.net>"]


[[bin]]
name = "katome"
path = "src/client.rs"

[lib]
name = "katome"
path = "src/katome/lib.rs"

[dependencies]
pbr = "0.1.1"
fnv = "*"
log = "*"

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
