[package]
name = "katome"
version = "0.1.0"
authors = ["Łukasz Neumann <fuine@riseup.net>"]


[[bin]]
name = "katome"
path = "src/client.rs"
doc = false

[lib]
name = "katome"
path = "src/katome/lib.rs"

[dependencies]
log = "^0.3.6"
toml = "^0.2.1"
rustc-serialize = "^0.3.22"
lazy_static = "^0.2"
petgraph = "^0.4.1"
metrohash = "^0.2.0"
unwrap = "~1.1.0"
bio = "^0.10.0"
itertools = "^0.5.7"
parking_lot = "0.3.2"
# fixedbitset = "0.1.5"

[dependencies.log4rs]
version = "^0.5.0"
features = ["threshold_filter"]

[dependencies.fixedbitset]
git = "https://github.com/fuine/fixedbitset"
branch = "zeros"

[dev-dependencies]
rand = "^0.3.15"

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
